--- a/css/style.css
+++ b/css/style.css
@@ -586,6 +586,7 @@ h2 {
 .lot__image img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 .lot__info {
@@ -979,6 +980,7 @@ input:invalid .form__error{
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
+  object-fit: cover;
 }
 
 .lot-item__category {
